Adds interactive mobile nav menu

--- a/styles/index.css
+++ b/styles/index.css
@@ -21,9 +21,13 @@
 *::before,
 *::after {
   box-sizing: border-box;
-  font-family: var(--font-body);
   margin: 0;
   padding: 0;
+}
+
+body,
+button {
+  font-family: var(--font-body);
 }
 
 a {
@@ -34,8 +38,38 @@ p {
   line-height: 1.5;
 }
 
+ul {
+  list-style-type: none;
+}
+
 img {
   object-fit: cover;
+}
+
+/* Buttons  */
+.btn {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.btn--ham-menu {
+  padding: 0.5em;
+}
+
+/* Icons  */
+i {
+  pointer-events: none;
+}
+
+.fa-solid {
+  color: var(--clr-nav-link);
+  font-size: 1.25rem;
+}
+
+.fa-xmark {
+  text-align: right;
+  color: var(--clr-white);
 }
 
 /* Utility  */
@@ -55,9 +89,16 @@ img {
   display: grid;
 }
 
+.hidden {
+  display: none;
+}
+
+.no-scroll {
+  overflow: hidden;
+}
+
 /* Nav  */
 .nav-list {
-  list-style-type: none;
   justify-content: end;
   margin: 1.5em var(--nav-spacing);
   gap: 3.88em;
@@ -88,6 +129,31 @@ img {
   color: var(--clr-nav-link);
   font-weight: 600;
   text-transform: uppercase;
+  display: inline-block;
+  text-align: center;
+}
+
+/* Nav Menu  */
+.nav-menu {
+  background: var(--clr-footer-bg);
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  width: 70%;
+  z-index: 999;
+  gap: 2em;
+}
+
+.nav-menu a,
+.nav-menu button {
+  width: 100%;
+  color: var(--clr-white);
+}
+
+.nav-menu .btn--ham-menu {
+  text-align: right;
+  padding: 1em;
 }
 
 /* Posts Section */
@@ -203,13 +269,6 @@ img {
   margin: 0 auto 3.19em;
 }
 
-/* Buttons  */
-.btn {
-  background: none;
-  border: none;
-  cursor: pointer;
-}
-
 /* Footer  */
 .footer {
   background: var(--clr-footer-bg);
@@ -229,5 +288,11 @@ img {
   }
   .hero-post__content {
     padding: 13vw 0;
+  }
+  .ham-btn-li {
+    display: none;
+  }
+  .nav-li {
+    display: block;
   }
 }
