--- a/styles/index.css
+++ b/styles/index.css
@@ -15,6 +15,7 @@
   --section-spacing: 3.31em;
   --post-img-height: 232px;
   --radius-soft: 3px;
+  --transition-quick: all 0.2s;
   font-size: 17px;
 }
 
@@ -164,6 +165,17 @@ i {
 }
 
 /* Posts Section */
+.post * {
+  pointer-events: none;
+}
+
+.hero-post:hover,
+.post__container:hover {
+  opacity: 0.7;
+  cursor: pointer;
+  transition: var(--transition-quick);
+}
+
 .posts-container {
   grid-template: auto / var(--outside-spacing) 1fr var(--outside-spacing);
   grid-template-areas:
